[fix] 이중괄호 일때 괄호 삭제하는 부분 수정